Fix shifting nav

--- a/app/assets/stylesheets/buttons.scss
+++ b/app/assets/stylesheets/buttons.scss
@@ -172,12 +172,14 @@
     font-size: 16px;
     color: white;
     margin: 5px;
+    width: 65px;
 }
 
 .fa-linkedin {
     font-size: 16px;
     color: white;
     margin-left: 10px;
+    width: 175px;
 }
 
 .fa-user-circle {
