--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -30,7 +30,6 @@
 
 .notlogged-nav {
     display: flex;
-    // justify-content: space-evenly;
     align-items: center;
     justify-content: space-between;
     margin-top: 5px; 
@@ -48,7 +47,6 @@
 .notlogged-right {
     margin-right: 130px;
     display: flex; 
-    // justify-content: space-between;
 }
 
 .notlogged-nav span {
@@ -96,6 +94,7 @@
     color: white;
 }
 
+
 #github span {
     margin-left: 7px;
     font-size: 14px;
@@ -120,6 +119,7 @@
     font-family: Arial, Helvetica, sans-serif;
     font-weight: 600;
     font-size: 14px;
+    font-style: italic;
 }
 
 #linkedin:hover:after {
@@ -128,6 +128,7 @@
     font-family: Arial, Helvetica, sans-serif;
     font-weight: 600;
     font-size: 14px;
+    font-style: italic;
 }
 
 .loggednav-right {
@@ -167,6 +168,7 @@
     flex-direction: row;
     align-items: center;
     height: 50px;
+    margin-left: -70px;
 }
 
 .navsearch #navsearch1 input {
